<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".view.SearchFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bar_color"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_left_arrow"
                        app:tint="@color/bar_primary" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/fixtureHalfTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="18dp"
                    android:fontFamily="@font/gilroy_extrabold"
                    android:text="@string/search_repo_title"
                    android:textAllCaps="true"
                    android:textColor="@color/bar_primary"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/bar_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="15dp"
                    app:cardBackgroundColor="@color/search_bg_color"
                    app:cardCornerRadius="12dp"
                    app:strokeColor="@color/search_stroke_color"
                    app:strokeWidth="2.5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="15dp"
                            android:layout_marginStart="3dp"
                            android:src="@drawable/ic_search"
                            app:tint="@color/search_text_color" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:theme="@style/Theme.MaterialComponents"
                            app:boxStrokeWidth="0dp"
                            app:boxStrokeWidthFocused="0dp"
                            app:endIconMode="clear_text"
                            app:endIconTint="@color/end_icon_color"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/userName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@android:color/transparent"
                                android:fontFamily="@font/gilroy_bold"
                                android:hint="@string/search_username_hint"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@color/search_text_color"
                                android:textColorHint="#A0A0A0"
                                android:textSize="16sp" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp">

                    <com.dd.processbutton.iml.ActionProcessButton
                        android:id="@+id/search"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:fontFamily="@font/gilroy_extrabold"
                        android:text="@string/search_repo_btn"
                        android:textAllCaps="true"
                        android:textColor="@color/primaryColor_800"
                        android:textSize="14sp"
                        app:pb_colorComplete="@color/green_complete"
                        app:pb_colorError="@color/red_error"
                        app:pb_colorNormal="@color/secondaryColor"
                        app:pb_colorPressed="@color/blue_pressed"
                        app:pb_colorProgress="@color/purple_progress"
                        app:pb_textProgress="@string/search_repo_btn_loading" />

                </androidx.cardview.widget.CardView>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/reposRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:overScrollMode="never"
                        android:visibility="invisible" />

                    <com.google.android.material.progressindicator.CircularProgressIndicator
                        android:id="@+id/loadingProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="gone"
                        app:indicatorColor="@color/primaryColor_700"
                        app:trackCornerRadius="6dp"
                        app:trackThickness="8dp" />

                </FrameLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>